<resources>
    <string name="app_name">My Application</string>
    <string name="RegistrationWindowName">Регистрация</string>
    <string name="AvtorizationWindowName">Авторизация</string>
    <string name="EnterButton">Продолжить</string>
    <string name="LoginButton">Войти в существующий аккаунт</string>
    <string name="RegistrationButton">Зарегистрироваться</string>
    <string name="title_activity_menu">activity_menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>