<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#0A1F32"
    android:layout_height="match_parent"
    tools:context=".AvtorizationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="129dp"
        android:layout_height="118dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        tools:text="@string/RegistrationWindowName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AvtorizationWindowName"
        android:textColor="#CCFFFFFF"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.027" />

    <Button
        android:id="@+id/buttonEnter"
        android:layout_width="192dp"
        android:layout_height="61dp"
        android:backgroundTint="@color/orange"
        android:text="@string/EnterButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/RegistrationButton"
        android:textColor="#B3FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEnter"
        app:layout_constraintVertical_bias="0.061" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="297dp"
        android:layout_height="55dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="Пароль"
        android:inputType="textPassword"
        android:textColor="#6E727B"
        android:textColorHint="#6E727B"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEnter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.906" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="297dp"
        android:layout_height="54dp"
        android:ems="10"
        android:hint="Логин"
        android:inputType="textPersonName"
        android:textColor="#6E727B"
        android:textColorHint="#6E727B"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.55" />
</androidx.constraintlayout.widget.ConstraintLayout>